# tao

./: .gitignore  Cargo.toml  README.md
crates/tao-cli/: Cargo.toml
crates/tao-cli/src/: main.rs
crates/tao-consensus/: Cargo.toml
crates/tao-consensus/src/: block.rs  chain.rs  difficulty.rs  genesis.rs  lib.rs  mine.rs  target.rs
crates/tao-consensus/src/pow/: blake3pow.rs  mod.rs
crates/tao-consensus/tests/: convergence.rs
crates/tao-core/: Cargo.toml
crates/tao-core/src/: config.rs  error.rs  genesis.rs  lib.rs  logging.rs
crates/tao-dag/: Cargo.toml
crates/tao-dag/src/: lib.rs
crates/tao-dagvm/: Cargo.toml
crates/tao-dagvm/src/: dag_chain.rs  lib.rs
crates/tao-database/: Cargo.toml
crates/tao-database/src/: accounts_db.rs  block_log.rs  lib.rs  smt.rs
crates/tao-ghostdag/: Cargo.toml
crates/tao-ghostdag/src/: engine.rs  lib.rs  protocol.rs  tests.rs
crates/tao-mempool/: Cargo.toml
crates/tao-mempool/src/: lib.rs
crates/tao-node/: Cargo.toml
crates/tao-node/src/: main.rs  node.rs  rpc.rs  shared.rs
crates/tao-p2p/: Cargo.toml
crates/tao-p2p/src/: lib.rs
crates/tao-pouw/: Cargo.toml
crates/tao-pouw/src/: gemm.rs  lib.rs  utility_gate.rs
crates/tao-reachability/: Cargo.toml
crates/tao-reachability/src/: extensions.rs  inquirer.rs  interval.rs  lib.rs  reindex.rs  store.rs  tests.rs  tree.rs
crates/tao-rpc/: Cargo.toml
crates/tao-rpc/src/: lib.rs
crates/tao-runtime/: Cargo.toml
crates/tao-runtime/src/: bank.rs  blockhash_queue.rs  genesis.rs  lib.rs
crates/tao-wallet/: Cargo.toml
crates/tao-wallet/src/: lib.rs
docs/: PLAN.md  pruning.md  svm-integration-4.0.md  utility-gate.md
scripts/: devnet.sh
