[package]
name = "tao-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tao chain command-line wallet and operator tool"

[[bin]]
name = "tao"
path = "src/main.rs"

[dependencies]
tao-core.workspace = true
tao-wallet.workspace = true
clap.workspace = true
anyhow.workspace = true
