[package]
name = "tao-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tao chain command-line wallet and operator tool"

[[bin]]
name = "tao"
path = "src/main.rs"

[dependencies]
tao-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
ureq.workspace = true
bs58.workspace = true
base64.workspace = true
bincode.workspace = true
solana-pubkey.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-transaction = { workspace = true, features = ["bincode"] }
solana-system-interface.workspace = true
