[package]
name = "tao-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Block/header types, PoW verification, chain selection, and difficulty adjustment"

[dependencies]
tao-core.workspace = true
serde.workspace = true
bincode.workspace = true
blake3.workspace = true
primitive-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
solana-pubkey.workspace = true
solana-hash.workspace = true

[dev-dependencies]
tao-core.workspace = true
primitive-types.workspace = true
