[package]
name = "tao-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tao chain shared core: errors, config, logging, genesis, and Solana-compatible primitives"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
blake3.workspace = true
bincode.workspace = true
solana-pubkey.workspace = true
solana-hash.workspace = true
