[package]
name = "tao-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tao chain full-node daemon"

[[bin]]
name = "tao-node"
path = "src/main.rs"

[dependencies]
tao-core.workspace = true
tao-consensus.workspace = true
tao-database.workspace = true
tao-runtime.workspace = true
tao-p2p.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true
bincode.workspace = true
primitive-types.workspace = true
solana-pubkey.workspace = true
ctrlc.workspace = true
tokio.workspace = true
axum.workspace = true
base64.workspace = true
bs58.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account.workspace = true
solana-transaction.workspace = true
solana-signature.workspace = true
solana-rent.workspace = true
