[package]
name = "tao-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal TCP gossip networking: block/transaction relay"

[dependencies]
tao-core.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
