[package]
name = "tao-pouw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "matmul-PoUW: AI-shaped Proof-of-Useful-Work (NoisyGEMM), a PowAlgorithm"

[dependencies]
tao-consensus.workspace = true
blake3.workspace = true

[dev-dependencies]
tao-core.workspace = true
