[package]
name = "tao-reachability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Efficient blockDAG reachability index (interval-tree), ported from rusty-kaspa (ISC)"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
