[package]
name = "tao-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bank layer: AccountsDB plus solana-svm transaction execution"

[dependencies]
tao-core.workspace = true
tao-database.workspace = true
thiserror.workspace = true
tracing.workspace = true
solana-pubkey.workspace = true
solana-account.workspace = true
solana-hash.workspace = true
solana-sdk-ids.workspace = true
